# HydrologicPhasePortrets

./: README.md  pyproject.toml
PaperText/: TextBody.aux  TextBody.bbl  TextBody.blg  TextBody.fdb_latexmk  TextBody.fls  TextBody.out  TextBody.tex  references.bib
notebooks/: InitialBook.ipynb  test.py
src/DataProcessing/: some_file.py
