[project]
name = "phaseportraits"
version = "0.1.0"
description = "Integrative approach combining Singular Spectrum Analysis(SSA) and Convergent Cross Mapping (CCM) to identify clusters of dynamically similarhydrological systems"
authors = [
    {name = "Dmitrii Abramov",email = "dmbrmv96@gmail.com"}
]
readme = "README.md"
requires-python = ">3.11,<=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ruff (>=0.11.4,<0.12.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "polars (>=1.26.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Add "Q" to the list of enabled codes.
select = ["E4", "E7", "E9", "F", "Q", "D"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.pyright]
exclude = [
    "**/data"
]